fix(Menu): add z-index to improve menu visibility

--- a/src/components/Menu/index.module.css
+++ b/src/components/Menu/index.module.css
@@ -38,6 +38,7 @@
   overflow: hidden;
   pointer-events: none;
   transition: opacity 0.2s;
+  z-index: 2;
 }
 
 .drawer {
